# 26th-summer-NotebookLocal

./: .gitignore  PIPELINE.md  README.md  TESTING_GUIDE.md  pyproject.toml  test.md  test_router.py  vLLM.md
configs/: server.yaml
configs/models/: openai.yaml  qwen_text.yaml  qwen_vision.yaml
inference-server/: .env.example  ADDING_MODELS_AND_ADAPTERS.md  DATABASE_SETUP.md  MONITORING_GUIDE.md  QUICKSTART.md  README.md  SYSTEM_RULES.md  WORKFLOW_MIGRATION_CLEANUP.md  config.py  db_inspect.py  debug_rag_pipeline.py  debug_tools.py  docker-compose.yml  pyproject.toml  requirements.txt  reset_postgresql.py  reset_weaviate.py  setup.py  setup_docker.sh  setup_local_dev.sh  start_server.py  test_file_management_system.py  test_workflow_integration.py
inference-server/api/: context_routes.py  document_routes.py  intelligence_routes.py  main.py  routes.py  vault_routes.py
inference-server/configs/: adapters.yaml  prompts.yaml  routing.yaml
inference-server/configs/models/anthropic/: claude-3-5-sonnet-20241022.yaml
inference-server/configs/models/openai/: gpt-4o-mini.yaml  text-embedding-3-large.yaml
inference-server/configs/models/qwen/: Qwen2.5-VL-7B-Instruct-unsloth-bnb-4bit.yaml  Qwen3-14B-Instruct-bnb-4bit.yaml  Qwen3-embedding-0.6B.yaml
inference-server/migrations/: 005_add_vault_files_table.py  006_add_enhanced_processing_fields.py
inference-server/src/: main.py
inference-server/src/database/: connection.py  file_manager.py  init_db.py  manager.py  models.py
inference-server/src/intelligence/: __init__.py  capability_router.py  context_engine.py  context_engine_clean.py  context_manager.py  intelligence_service.py  intent_detector.py  prompt_manager.py
inference-server/src/intelligence/engines/: __init__.py  base_engine.py  maintain_engine.py  navigate_engine.py  synthesize_engine.py  transform_engine.py  understand_engine.py
inference-server/src/llm/: __init__.py
inference-server/src/llm/adapters/: anthropic_adapter.py  openai_adapter.py  qwen_adapter.py  qwen_text_adapter.py  qwen_vision_adapter.py
inference-server/src/llm/core/: __init__.py  base_adapter.py  exceptions.py  router.py
inference-server/src/llm/utils/: config_loader.py  logger.py
inference-server/src/processors/: embedder.py  image_processor.py  pdf_processor.py  text_processor.py
inference-server/src/services/: __init__.py  background_processor.py  document_processing_service.py  processing_models.py
inference-server/src/storage/: hybrid_store.py  vector_store.py
inference-server/src/utils/: logger.py
inference-server/src/vault/: file_queue_manager.py  file_watcher.py
inference-server/src/workflows/: document_workflow.py  intelligence_workflow.py  prefect_document_flows.py  qa_workflow.py
inference-server/tools/: README.md  db_inspect.py  debug_tools.py
modular_model/: .env.template  README.md  test.md  test_autostart.py  vLLM.md
modular_model/configs/: routing.yaml
modular_model/scripts/: start_qwen_vision.sh  start_vllm.sh  stop_vllm.sh
notebook-local/: README.md  main.js  manifest.json  package.json  styles.css  tsconfig.json
notebook-local/src/: constants-minimal.ts  (+2 more)
obsidian-plugin/: esbuild.config.mjs  main.js  manifest.json  package.json  styles.css  tailwind.config.js  tsconfig.json
scripts/: start_qwen_text.sh  start_vllm.sh
src/: main.py
(+46 files in other folders)
