[project]
name = "inference-server"
version = "1.0.0"
description = "A hybrid PostgreSQL + Weaviate RAG system with modular LLM routing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Core FastAPI dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv",
    "python-multipart",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Database dependencies for hybrid PostgreSQL + Weaviate architecture
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    
    # Vector store dependencies
    "weaviate-client>=4.4.0,<4.6.0",
    "chromadb",
    "numpy",
    "protobuf>=4.21.0,<5.0",
    
    # LangChain ecosystem
    "langchain>=0.2.0,<0.3.0",
    "langchain-community>=0.2.0,<0.3.0",
    "langchain-openai>=0.1.7",
    "langchain-anthropic>=0.1.0",
    "langgraph",
    
    # Document processing
    "pdfplumber",
    "PyPDF2",
    "pymupdf",
    "Pillow",
    
    # LLM dependencies
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.7.0",
    
    # Local model dependencies (VLLM + Transformers)
    "torch>=2.0.0",
    "transformers>=4.51.1,<4.52.0",
    "accelerate>=0.24.0",
    "bitsandbytes>=0.46.1",
    "vllm==0.8.5",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true